syntax = "proto3";
package proto;

message App {
    string id = 1;
    string name = 2;
    bool enabled = 3;
}

message CreateAppRequest {
    string name = 1;
}

message CreateAppResponse {
    App app = 1;
}

service AppService {
    rpc CreateApp(CreateAppRequest) returns (CreateAppResponse) {}
}